<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_bg">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hireitservicesresources.callndata.QuickPay_Activity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_contact_info"
            android:textColor="#ffffff"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="20dp"
            android:background="#769CB2"

            />

    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ci_india"
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_margin="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ci_callndata"
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_marginLeft="40dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ci_adrs1"
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ci_adrs2"
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ci_adrs3"
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ci_adrs4"
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />


        <TextView
            android:id="@+id/ph1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ci_ph1"
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />


        <TextView
            android:id="@+id/ph2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ci_ph2"
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />

        <TextView
            android:id="@+id/email1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ci_email1"
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ci_north_america"
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/ph3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ci_ph3"
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />

        <TextView
            android:id="@+id/email2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ci_email2"
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            />


    </LinearLayout>
    </ScrollView>

</LinearLayout>
</ScrollView>