<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/main_bg">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="hireitservicesresources.callndata.QuickPay_Activity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_helpdesk"
            android:textColor="#ffffff"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="20dp"
            android:background="#769CB2"

            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ctxt_fullname"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/hd_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/fieldset_large"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#000000"
        android:padding="5dp"
        android:textSize="15sp"
        android:singleLine="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ctxt_email"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/hd_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/fieldset_large"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#000000"
        android:padding="5dp"
        android:textSize="15sp"
        android:singleLine="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ctxt_subject"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/hd_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/fieldset_large"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#000000"
        android:padding="5dp"
        android:textSize="15sp"
        android:singleLine="true"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ctxt_msg"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/hd_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/fieldset_large"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#000000"
        android:padding="5dp"
        android:textSize="15sp"
        android:lines="4"
        android:maxLines="4"
        />


    <Button
        android:id="@+id/hd_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:background="#345F9B"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:textColor="#ffffff"/>

</LinearLayout>
</ScrollView>