<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hireitservicesresources.callndata.QuickPay_Activity"
    android:background="@mipmap/main_bg"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_saas_solutions"
            android:textColor="#ffffff"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="20dp"
            android:background="#769CB2"

            />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ss_tech"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>

            <Spinner
                android:id="@+id/spinner_technology"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_fullname"
                android:background="@mipmap/fieldset_large"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#000000"
                android:padding="5dp"
                android:textSize="15sp"
                android:singleLine="true"
                android:focusable="true"
                />



            <TextView
                android:id="@+id/txt_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="#000000"
                android:padding="5dp"
                android:textSize="15sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ss_duration"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_subscription_options"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_phone"
                    android:background="@mipmap/fieldset_large"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="#000000"
                    android:padding="5dp"
                    android:textSize="15sp"
                    />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right">

                <TextView
                    android:id="@+id/txt_tot"
                    android:layout_weight="0.3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/amt"
                    android:gravity="right"
                    android:text="@string/bs_total"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"/>


                <TextView

                    android:id="@+id/dollar"
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/bs_US"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toLeftOf="@+id/amt"
                    android:gravity="right"/>


                <TextView
                    android:id="@+id/amt"
                    android:gravity="left"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_alignParentRight="true"
                    />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bs_name"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/bs_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/fieldset_large"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#000000"
                android:padding="5dp"
                android:textSize="15sp"
                android:singleLine="true"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bs_email"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/bs_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/fieldset_large"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#000000"
                android:padding="5dp"
                android:textSize="15sp"
                android:singleLine="true"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bs_phone"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/bs_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/fieldset_large"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#000000"
                android:padding="5dp"
                android:textSize="15sp"
                android:inputType="number"
                android:singleLine="true"
                />




            <Button
                android:id="@+id/btn_hire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ss_subscribe"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:background="#345F9B"
                android:textSize="20dp"
                android:textAllCaps="false"
                android:textColor="#ffffff"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
